veil-tests/src/compile_tests/fail/pii_empty_struct.rs
fn main() {}

#[derive(veil::Pii)]
struct EmptyStruct;
